[package]
name = "certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
vergen = "7.4.2"
chrono = "0.4.22"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
