[package]
name = "certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive", "clap_derive"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"] }
time = "0.3.15"
rand = "0.8.5"
chrono = "0.4.22"

# The dependencies are used in the build.rs file
[build-dependencies]
vergen = "7.4.2"
chrono = "0.4.22"

[profile.release]
strip = true  # Automatically strip symbols from the binary.

# Specify which linker to use for this target
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
